@@ -120,7 +120,7 @@ TMDA also works perfectly under
 <a name="3">Does TMDA have a web interface?</a>
 </b>
 <br><br>
-Yes.  <a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+Yes.  <a href="http://qadmin-tmda.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
 a TMDA configuration and administration tool which integrates into the 
 <a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
  web managment system.  For more information on QAdmin-TMDA's capabilities,
