@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu May 16 15:45:48 2002 -->
+<!-- Tue May 28 11:31:09 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -251,7 +251,7 @@ TMDA also works perfectly under
 <a name="3">Does TMDA have a web interface?</a>
 </b>
 <br><br>
-Yes.  <a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+Yes.  <a href="http://qadmin-tmda.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
 a TMDA configuration and administration tool which integrates into the 
 <a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
  web managment system.  For more information on QAdmin-TMDA's capabilities,
