@@ -23,7 +23,7 @@ tutorial for installing TMDA with vpopmail</a><br><br>
 Using Gnus with TMDA to reduce UCE</a> HOWTO<br><br>
 
 <li>Francisco Sam Castillo's 
-<a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+<a href="http://qadmin-tmda.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
 a TMDA configuration and administration tool which integrates into the 
 <a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
  web managment system.<br><br>
