@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue May 21 15:43:16 2002 -->
+<!-- Tue May 28 11:29:28 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -154,7 +154,7 @@ tutorial for installing TMDA with vpopmail</a><br><br>
 Using Gnus with TMDA to reduce UCE</a> HOWTO<br><br>
 
 <li>Francisco Sam Castillo's 
-<a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
+<a href="http://qadmin-tmda.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
 a TMDA configuration and administration tool which integrates into the 
 <a href="http://inter7.com/qmailadmin/" TARGET="Resource Window">QmailAdmin</a>
  web managment system.<br><br>
