@@ -1,3 +1,9 @@
+2002-05-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* faq.ht: Update link to QAdmin-TMDA.
+
+	* resources.ht (Links): Ditto.
+
 2002-05-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* results.ht (Links): Add testimonial from Ed Colmar.
